--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "app-service-hello-world",
     "description": "Simple Hello World Node.js sample for Azure App Service",
     "version": "0.0.1",
-    "private": false,
+    "private": true,
     "license": "MIT",
     "author": "Microsoft",
     "scripts": {
